objects/AW_LibertySystemChange__e.object
<CustomObject>
    <fields>
        <fullName>AW_ClientIdentificationNumber__c</fullName>
        <label>Client Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ClientIdentificationType__c</fullName>
        <label>Client Identification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ConsultantCode__c</fullName>
        <label>Consultant Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_EventType__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SourceID__c</fullName>
        <label>Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_UACFID__c</fullName>
        <label>UACF ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Liberty System Change</label>
    <pluralLabel>Liberty System Changes</pluralLabel>
</CustomObject>